[tool.pytest.ini_options]
addopts = "-s"
norecursedirs=["test/dyndbmutex"]

[tool.coverage.run]
omit = [ "test/dyndbmutex/*"]

[tool.vulture]
min_confidence = 80
paths = ["src"]
sort_by_size = true
ignore_names = []
# exclude = ["src/dyndbmutex",]

[tool.ruff]
line-length = 88
ignore = ["E501", "F405", "F403", "E722"]

# E501 line too long 
# F405 star imports
# F403 from module import *’ used; unable to detect undefined names
# E722 do not use bare 'except'

[tool.bandit]
exclude_dirs = [
    # "test", 
]
skips = ["B101"]
# tests = ["B201", "B301"]

[tool.mypy]
python_version = "3.11"
follow_imports = "silent"
# files = [
#     # "kleanse/management/commands/kleanse.py",
# ]

# https://mypy.readthedocs.io/en/stable/config_file.html
exclude = [
    # "main/tests/test.py",
]

ignore_missing_imports = true
disable_error_code = "misc"


[tool.poetry]
name = "remote-signer"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.28.40"
botocore = "^1.31.40"
gunicorn = "^21.2.0"
flask = "^2.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
